RESOLVED FIXED102035
REGRESSION(134048): TiledBackingStore must create tiles when the contents rect is changed.
https://bugs.webkit.org/show_bug.cgi?id=102035
Summary REGRESSION(134048): TiledBackingStore must create tiles when the contents rec...
Dongseong Hwang
Reported 2012-11-12 19:29:29 PST
Before r134048, the visibleRect contained information of both the viewport and the contents rect. Now the visible rect is related to only the viewport. So TiledBackingStore::coverWithTilesIfNeeded() early returns even if the contents rect is changed, because changing the contents rect is independent on changing both a trajectory vector and the visible rect.
Attachments
Patch (2.18 KB, patch)
2012-11-12 19:34 PST, Dongseong Hwang
no flags
Patch (2.10 KB, patch)
2012-11-13 14:44 PST, Dongseong Hwang
no flags
Dongseong Hwang
Comment 1 2012-11-12 19:34:07 PST
Darin Adler
Comment 2 2012-11-13 09:54:34 PST
Comment on attachment 173796 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173796&action=review > Source/WebCore/platform/graphics/TiledBackingStore.cpp:72 > + const IntRect rect = mapFromContents(m_client->tiledBackingStoreContentsRect()); The const here is unneeded and not the right coding style. The visibleRect variable on the previous line is equally constant.
Dongseong Hwang
Comment 3 2012-11-13 14:44:03 PST
Dongseong Hwang
Comment 4 2012-11-13 14:44:29 PST
(In reply to comment #2) > (From update of attachment 173796 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=173796&action=review > > > Source/WebCore/platform/graphics/TiledBackingStore.cpp:72 > > + const IntRect rect = mapFromContents(m_client->tiledBackingStoreContentsRect()); > > The const here is unneeded and not the right coding style. The visibleRect variable on the previous line is equally constant. Thanks for review! I removed 'const'.
Kenneth Rohde Christiansen
Comment 5 2012-11-21 02:09:33 PST
Comment on attachment 173994 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173994&action=review > Source/WebCore/platform/graphics/TiledBackingStore.cpp:77 > > - if (m_trajectoryVector == normalizedVector && m_visibleRect == visibleRect) > + if (m_trajectoryVector == normalizedVector && m_visibleRect == visibleRect && m_rect == rect) I would have added a comment here
WebKit Review Bot
Comment 6 2012-11-21 02:18:40 PST
Comment on attachment 173994 [details] Patch Clearing flags on attachment: 173994 Committed r135366: <http://trac.webkit.org/changeset/135366>
WebKit Review Bot
Comment 7 2012-11-21 02:18:43 PST
All reviewed patches have been landed. Closing bug.
Dongseong Hwang
Comment 8 2012-11-21 02:36:07 PST
Comment on attachment 173994 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173994&action=review >> Source/WebCore/platform/graphics/TiledBackingStore.cpp:77 >> + if (m_trajectoryVector == normalizedVector && m_visibleRect == visibleRect && m_rect == rect) > > I would have added a comment here Thanks for your favor!
Note You need to log in before you can comment on or make changes to this bug.