REGRESSION(134048): TiledBackingStore must create tiles when the contents rect is changed. https://bugs.webkit.org/show_bug.cgi?id=102035

Patch by Huang Dongsung <luxtella@company100.net> on 2012-11-21
Reviewed by Kenneth Rohde Christiansen.

Before r134048, the visibleRect contained information of both the viewport and
the contents rect. Now the visible rect is related to only the viewport. So
TiledBackingStore::coverWithTilesIfNeeded() early returns even if the contents
rect is changed, because changing the contents rect is independent on changing
both a trajectory vector and the visible rect.

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::coverWithTilesIfNeeded):

Canonical link: https://commits.webkit.org/121029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135366 268f45cc-cd09-0410-ab3c-d52691b4dbfc